[package]
name = "axdriver_block"
edition = "2021"
description = "Common traits and types for block storage drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_block"
keywords = ["arceos", "driver", "blk"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
dw-mshc = [
  "dep:bcm2835-sdhci",
  "dep:axtask",
  "dep:axmm",
  "dep:axhal",
  "dep:bitflags",
  "dep:bitfield-struct",
  "dep:byte-slice-cast",
]
ahci = [
  "dep:axhal",
  "dep:axmm",
  "dep:axtask",
]
ramdisk = []
bcm2835-sdhci = []
default = []

[dependencies]
log = "0.4"
axdriver_base = { workspace = true }
bcm2835-sdhci = { git = "https://github.com/lhw2002426/bcm2835-sdhci.git", rev = "e974f16", optional = true }
bitflags = { version = "2.9.1", optional = true }
bitfield-struct = { version = "0.11.0", optional = true }
byte-slice-cast = { version = "1.2.3", default-features = false, optional = true }
axtask = { path = "../../../modules/axtask", features = [
  "multitask",
], optional = true }
axmm = { path = "../../../modules/axmm", optional = true }
axhal = { path = "../../../modules/axhal", optional = true }
